# aether

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
aether-macros/: Cargo.toml
aether-macros/src/: lib.rs
src/: lib.rs
static/: lilguy.opus  lilguyleft.opus  lilguyright.opus  style.css
templates/: error.html  index.html  layout.html  lilguy.html
templates/partials/: user_list.html
