[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
aether-macros = { path = "aether-macros" }
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["derive"] }
csv = "1.3.1"
derive = "1.0.0"
features = "0.10.0"
lambda_http = "0.15.1"
serde = "1.0.219"
serde_urlencoded = "0.7.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

[features]
dev = ["static", "fakedb"]
static = []
fakedb = []

[package.metadata.lambda.watch.router]
"/" = "index"
"/users/list" = "users_list"
"/users/add" = "users_add"
"/lilguy" = "lilguy"

"/static/{*_}" = "static"

[[bin]]
name = "static"
path = "src/bin/static.rs"
required-features = ["static"]
